--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p >
-        hola estudiantes este es mi sitio web  
-        sdsdsdsadadsa
+        hola amigos este es mi sitio web  
+        
 
     </p>
 </body>
